webpack and package.jspn added

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>React + Spring</title>
 </head>
 <body>
-<h2>Table will be here</h2>
+    <script src="dist/bundle.js"></script>
+    <h2>Table will be here</h2>
 </body>
 </html>
