react added and works

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>React + Spring</title>
+  <title>React + Spring</title>
 </head>
+
 <body>
-    <script src="dist/bundle.js"></script>
-    <h2>Table will be here</h2>
+  <div id="app"></div>
+  <script src="generated/js6-react-bundle.js"></script>
 </body>
+
 </html>
