Form with validation, react-bootstrap used as component

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>React Users Table</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 
 <body>
